// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`error-boundaries > BilingualErrorBoundary > should correctly render the bilingual error boundary when it catches a generic error > expected html 1 1`] = `
<html
  lang="en"
>
  <head>
    <meta
      charset="utf-8"
    />
    <meta
      content="width=device-width, initial-scale=1"
      name="viewport"
    />
    <meta
      content="My Canada Disability Benefit letters - Error-Mes lettres de la Prestation canadienne pour les personnes handicapées - Erreur"
      name="dcterms.title"
    />
    <meta
      content="eng-fra"
      name="dcterms.language"
    />
    <meta
      content="Employment and Social Development Canada-Emploi et Développement social Canada"
      name="dcterms.creator"
    />
    <meta
      content="1"
      name="dcterms.accessRights"
    />
    <meta
      content="ESDC-EDSC_MSCA-MDSC_CDBLetters-LettresPCPH"
      name="gcaaterms.sitename"
    />
    <link
      href="build/stub-path-to-module.js"
      rel="modulepreload"
    />
    <script
      src="/api/client-env?v=undefined"
    />
  </head>
  <body>
    <div>
      <header
        class="border-b-[3px] border-slate-700 print:hidden"
      >
        <div
          id="wb-bnr"
        >
          <div
            class="container flex items-center justify-between gap-6 py-2.5 sm:py-3.5"
          >
            <a
              href="https://canada.ca/"
            >
              <img
                alt="gcweb:header.govt-of-canada.text / gcweb:header.govt-of-canada.text"
                class="h-8 w-auto"
                decoding="async"
                height="28"
                src="https://www.canada.ca/etc/designs/canada/wet-boew/assets/sig-blk-en.svg"
                width="300"
              />
            </a>
          </div>
        </div>
      </header>
      <main
        class="container"
      >
        <div
          class="grid grid-cols-1 gap-6 py-2.5 sm:grid-cols-2 sm:py-3.5"
        >
          <div
            id="english"
            lang="en"
          >
            <div
              class="mt-10 mb-8"
            >
              <h1
                class="font-lato text-3xl font-bold focus-visible:ring-3 after:mt-2 after:block after:h-1.5 after:w-18 after:bg-red-700 my-8"
                id="wb-cont"
                tabindex="-1"
              >
                <span>
                  gcweb:server-error.page-title
                </span>
                <small
                  class="block text-2xl font-normal text-neutral-500"
                >
                  gcweb:server-error.page-subtitle
                </small>
              </h1>
            </div>
            <p
              class="mb-8 text-lg text-gray-500"
            >
              gcweb:server-error.page-message
            </p>
          </div>
          <div
            id="french"
            lang="fr"
          >
            <div
              class="mt-10 mb-8"
            >
              <h1
                class="font-lato text-3xl font-bold focus-visible:ring-3 after:mt-2 after:block after:h-1.5 after:w-18 after:bg-red-700 my-8"
                id="wb-cont"
                tabindex="-1"
              >
                <span>
                  gcweb:server-error.page-title
                </span>
                <small
                  class="block text-2xl font-normal text-neutral-500"
                >
                  gcweb:server-error.page-subtitle
                </small>
              </h1>
            </div>
            <p
              class="mb-8 text-lg text-gray-500"
            >
              gcweb:server-error.page-message
            </p>
          </div>
        </div>
      </main>
      <footer
        class="mt-8 bg-stone-50 print:hidden"
        id="wb-info"
        tabindex="-1"
      >
        <div />
        <div
          class="container flex items-center justify-between gap-6 py-2.5 sm:py-3.5"
        >
          <h2
            class="sr-only"
          >
            <span
              lang="en"
            >
              gcweb:footer.about-site
            </span>
             / 
            <span
              lang="fr"
            >
              gcweb:footer.about-site
            </span>
          </h2>
          <div
            class="flex flex-col items-start gap-2 text-sm leading-6 sm:flex-row sm:items-center sm:gap-4"
          >
            <a
              class="text-slate-700 hover:underline"
              data-gc-analytics-navigation="Footer:Footer:gcweb:footer.terms-conditions.text"
              href="gcweb:footer.terms-conditions.href"
            >
              gcweb:footer.terms-conditions.text
            </a>
            <div
              class="hidden size-0 rounded-full border-[3px] border-slate-700 sm:block"
            />
            <a
              class="text-slate-700 hover:underline"
              data-gc-analytics-navigation="Footer:Footer:gcweb:footer.privacy.text"
              href="gcweb:footer.privacy.href"
            >
              gcweb:footer.privacy.text
            </a>
          </div>
          <div>
            <img
              alt="gcweb:footer.gc-symbol / gcweb:footer.gc-symbol"
              class="h-10 w-auto"
              height="71"
              src="https://www.canada.ca/etc/designs/canada/wet-boew/assets/wmms-blk.svg"
              width="300"
            />
          </div>
        </div>
      </footer>
      <link
        rel="modulepreload"
      />
      <link
        rel="modulepreload"
      />
      <script>
         
      </script>
      <script
        async=""
        type="module"
      >
         
      </script>
    </div>
  </body>
</html>
`;

exports[`error-boundaries > BilingualErrorBoundary > should correctly render the bilingual error boundary when it catches an AppError > expected html 1 1`] = `
<html>
  <head />
  <body>
    <div>
      <h2>
        Unexpected Application Error!
      </h2>
      <h3
        style="font-style: italic;"
      >
        [vitest] No "Trans" export is defined on the "react-i18next" mock. Did you forget to return it from "vi.mock"?
If you need to partially mock a module, you can use "importOriginal" helper inside:

      </h3>
      <pre
        style="padding: 0.5rem; background-color: rgba(200, 200, 200, 0.5);"
      >
        Error: [vitest] No "Trans" export is defined on the "react-i18next" mock. Did you forget to return it from "vi.mock"?
If you need to partially mock a module, you can use "importOriginal" helper inside:

    at VitestMocker.createError (file:///home/charles-pham/git/canada-disability-benefit/frontend/node_modules/vitest/dist/chunks/execute.B7h3T_Hc.js:284:17)
    at Object.get (file:///home/charles-pham/git/canada-disability-benefit/frontend/node_modules/vitest/dist/chunks/execute.B7h3T_Hc.js:330:16)
    at BilingualErrorBoundary (/home/charles-pham/git/canada-disability-benefit/frontend/app/components/error-boundaries.tsx:112:22)
    at Object.react-stack-bottom-frame (/home/charles-pham/git/canada-disability-benefit/frontend/node_modules/react-dom/cjs/react-dom-client.development.js:23863:20)
    at renderWithHooks (/home/charles-pham/git/canada-disability-benefit/frontend/node_modules/react-dom/cjs/react-dom-client.development.js:5529:22)
    at updateFunctionComponent (/home/charles-pham/git/canada-disability-benefit/frontend/node_modules/react-dom/cjs/react-dom-client.development.js:8897:19)
    at beginWork (/home/charles-pham/git/canada-disability-benefit/frontend/node_modules/react-dom/cjs/react-dom-client.development.js:10522:18)
    at runWithFiberInDEV (/home/charles-pham/git/canada-disability-benefit/frontend/node_modules/react-dom/cjs/react-dom-client.development.js:1522:13)
    at performUnitOfWork (/home/charles-pham/git/canada-disability-benefit/frontend/node_modules/react-dom/cjs/react-dom-client.development.js:15140:22)
    at workLoopSync (/home/charles-pham/git/canada-disability-benefit/frontend/node_modules/react-dom/cjs/react-dom-client.development.js:14956:41)
      </pre>
      <p>
        💿 Hey developer 👋
      </p>
      <p>
        You can provide a way better UX than this when your app throws errors by providing your own 
        <code
          style="padding: 2px 4px; background-color: rgba(200, 200, 200, 0.5);"
        >
          ErrorBoundary
        </code>
         or
         
        <code
          style="padding: 2px 4px; background-color: rgba(200, 200, 200, 0.5);"
        >
          errorElement
        </code>
         prop on your route.
      </p>
    </div>
  </body>
</html>
`;

exports[`error-boundaries > BilingualNotFound > should correctly render the bilingual 404 when it catches a 404 error > expected html 1 1`] = `
<html
  lang="en"
>
  <head>
    <meta
      charset="utf-8"
    />
    <meta
      content="width=device-width, initial-scale=1"
      name="viewport"
    />
    <meta
      content="My Canada Disability Benefit letters - Error-Mes lettres de la Prestation canadienne pour les personnes handicapées - Erreur"
      name="dcterms.title"
    />
    <meta
      content="eng-fra"
      name="dcterms.language"
    />
    <meta
      content="Employment and Social Development Canada-Emploi et Développement social Canada"
      name="dcterms.creator"
    />
    <meta
      content="1"
      name="dcterms.accessRights"
    />
    <meta
      content="ESDC-EDSC_MSCA-MDSC_CDBLetters-LettresPCPH"
      name="gcaaterms.sitename"
    />
    <script
      src="/api/client-env?v=undefined"
    />
  </head>
  <body>
    <div>
      <header
        class="border-b-[3px] border-slate-700 print:hidden"
      >
        <div
          id="wb-bnr"
        >
          <div
            class="container flex items-center justify-between gap-6 py-2.5 sm:py-3.5"
          >
            <a
              href="https://canada.ca/"
            >
              <img
                alt="gcweb:header.govt-of-canada.text"
                class="h-8 w-auto"
                decoding="async"
                height="28"
                src="https://www.canada.ca/etc/designs/canada/wet-boew/assets/sig-blk-en.svg"
                width="300"
              />
              <span
                class="sr-only"
              >
                / 
                <span
                  lang="fr"
                >
                  gcweb:header.govt-of-canada.text
                </span>
              </span>
            </a>
          </div>
        </div>
      </header>
      <main
        class="container"
      >
        <div
          class="grid grid-cols-1 gap-6 py-2.5 sm:grid-cols-2 sm:py-3.5"
        >
          <div
            id="english"
            lang="en"
          >
            <div
              class="mt-10 mb-8"
            >
              <h1
                class="font-lato text-3xl font-bold focus-visible:ring-3 after:mt-2 after:block after:h-1.5 after:w-18 after:bg-red-700 my-8"
                id="wb-cont"
                tabindex="-1"
              >
                <span>
                  gcweb:not-found.page-title
                </span>
                <small
                  class="block text-2xl font-normal text-neutral-500"
                >
                  gcweb:not-found.page-subtitle
                </small>
              </h1>
            </div>
            <p
              class="mb-8 text-lg text-gray-500"
            >
              gcweb:not-found.page-message
            </p>
          </div>
          <div
            id="french"
            lang="fr"
          >
            <div
              class="mt-10 mb-8"
            >
              <h1
                class="font-lato text-3xl font-bold focus-visible:ring-3 after:mt-2 after:block after:h-1.5 after:w-18 after:bg-red-700 my-8"
                id="wb-cont"
                tabindex="-1"
              >
                <span>
                  gcweb:not-found.page-title
                </span>
                <small
                  class="block text-2xl font-normal text-neutral-500"
                >
                  gcweb:not-found.page-subtitle
                </small>
              </h1>
            </div>
            <p
              class="mb-8 text-lg text-gray-500"
            >
              gcweb:not-found.page-message
            </p>
          </div>
        </div>
      </main>
      <footer
        class="mt-8 bg-stone-50 print:hidden"
        id="wb-info"
        tabindex="-1"
      >
        <div />
        <div
          class="container flex items-center justify-between gap-6 py-2.5 sm:py-3.5"
        >
          <h2
            class="sr-only"
          >
            <span
              lang="en"
            >
              gcweb:footer.about-site
            </span>
             / 
            <span
              lang="fr"
            >
              gcweb:footer.about-site
            </span>
          </h2>
          <div
            class="flex flex-col items-start gap-2 text-sm leading-6 sm:flex-row sm:items-center sm:gap-4"
          >
            <a
              class="text-slate-700 hover:underline"
              data-gc-analytics-navigation="Footer:Footer:gcweb:footer.terms-conditions.text"
              href="gcweb:footer.terms-conditions.href"
            >
              gcweb:footer.terms-conditions.text
            </a>
            <div
              class="hidden size-0 rounded-full border-[3px] border-slate-700 sm:block"
            />
            <a
              class="text-slate-700 hover:underline"
              data-gc-analytics-navigation="Footer:Footer:gcweb:footer.privacy.text"
              href="gcweb:footer.privacy.href"
            >
              gcweb:footer.privacy.text
            </a>
          </div>
          <div>
            <img
              alt="gcweb:footer.gc-symbol / gcweb:footer.gc-symbol"
              class="h-10 w-auto"
              height="71"
              src="https://www.canada.ca/etc/designs/canada/wet-boew/assets/wmms-blk.svg"
              width="300"
            />
          </div>
        </div>
      </footer>
    </div>
  </body>
</html>
`;

exports[`error-boundaries > UnilingualErrorBoundary > should correctly render the unilingual error boundary when it catches a generic error > expected html 1 1`] = `
<html
  lang="en"
>
  <head>
    <meta
      charset="utf-8"
    />
    <meta
      content="width=device-width, initial-scale=1"
      name="viewport"
    />
    <meta
      content="My Canada Disability Benefit letters - Error"
      name="dcterms.title"
    />
    <meta
      content="eng"
      name="dcterms.language"
    />
    <meta
      content="Employment and Social Development Canada"
      name="dcterms.creator"
    />
    <meta
      content="1"
      name="dcterms.accessRights"
    />
    <meta
      content="ESDC-EDSC_MSCA-MDSC_CDBLetters-LettresPCPH"
      name="gcaaterms.sitename"
    />
    <script
      src="/api/client-env?v=undefined"
    />
  </head>
  <body>
    <div>
      <header
        class="border-b-[3px] border-slate-700 print:hidden"
      >
        <div
          id="wb-bnr"
        >
          <div
            class="container flex items-center justify-between gap-6 py-2.5 sm:py-3.5"
          >
            <a
              href="https://canada.ca/"
            >
              <img
                alt="gcweb:header.govt-of-canada.text"
                class="h-8 w-auto"
                decoding="async"
                height="28"
                src="https://www.canada.ca/etc/designs/canada/wet-boew/assets/sig-blk-en.svg"
                width="300"
              />
            </a>
          </div>
        </div>
      </header>
      <main
        class="container"
      >
        <div
          class="mt-10 mb-8"
        >
          <h1
            class="font-lato text-3xl font-bold focus-visible:ring-3 after:mt-2 after:block after:h-1.5 after:w-18 after:bg-red-700 my-8"
            id="wb-cont"
            tabindex="-1"
          >
            <span>
              gcweb:server-error.page-title
            </span>
            <small
              class="block text-2xl font-normal text-neutral-500"
            >
              gcweb:server-error.page-subtitle
            </small>
          </h1>
        </div>
        <p
          class="mb-8 text-lg text-gray-500"
        >
          gcweb:server-error.page-message
        </p>
      </main>
      <footer
        class="mt-8 bg-stone-50 print:hidden"
        id="wb-info"
        tabindex="-1"
      >
        <div>
          <div
            class="bg-gray-700 text-white"
          >
            <section
              class="container py-6"
            >
              <h2
                class="mb-4"
              >
                gcweb:footer.service-canada
              </h2>
              <div
                class="grid gap-x-4 gap-y-2 text-sm sm:grid-cols-3"
              >
                <a
                  class="hover:underline"
                  href="gcweb:app.contact-us.href"
                  property="item"
                  typeof="WebPage"
                >
                  <span
                    property="name"
                  >
                    gcweb:app.contact-us
                  </span>
                </a>
              </div>
            </section>
          </div>
        </div>
        <div
          class="container flex items-center justify-between gap-6 py-2.5 sm:py-3.5"
        >
          <h2
            class="sr-only"
          >
            gcweb:footer.about-site
          </h2>
          <div
            class="flex flex-col items-start gap-2 text-sm leading-6 sm:flex-row sm:items-center sm:gap-4"
          >
            <a
              class="text-slate-700 hover:underline"
              data-gc-analytics-navigation="Footer:Footer:gcweb:footer.terms-conditions.text"
              href="gcweb:footer.terms-conditions.href"
            >
              gcweb:footer.terms-conditions.text
            </a>
            <div
              class="hidden size-0 rounded-full border-[3px] border-slate-700 sm:block"
            />
            <a
              class="text-slate-700 hover:underline"
              data-gc-analytics-navigation="Footer:Footer:gcweb:footer.privacy.text"
              href="gcweb:footer.privacy.href"
            >
              gcweb:footer.privacy.text
            </a>
          </div>
          <div>
            <img
              alt="gcweb:footer.gc-symbol"
              class="h-10 w-auto"
              height="71"
              src="https://www.canada.ca/etc/designs/canada/wet-boew/assets/wmms-blk.svg"
              width="300"
            />
          </div>
        </div>
      </footer>
    </div>
  </body>
</html>
`;

exports[`error-boundaries > UnilingualErrorBoundary > should correctly render the unilingual error boundary when it catches an AppError > expected html 1 1`] = `
<html>
  <head />
  <body>
    <div>
      <h2>
        Unexpected Application Error!
      </h2>
      <h3
        style="font-style: italic;"
      >
        [vitest] No "Trans" export is defined on the "react-i18next" mock. Did you forget to return it from "vi.mock"?
If you need to partially mock a module, you can use "importOriginal" helper inside:

      </h3>
      <pre
        style="padding: 0.5rem; background-color: rgba(200, 200, 200, 0.5);"
      >
        Error: [vitest] No "Trans" export is defined on the "react-i18next" mock. Did you forget to return it from "vi.mock"?
If you need to partially mock a module, you can use "importOriginal" helper inside:

    at VitestMocker.createError (file:///home/charles-pham/git/canada-disability-benefit/frontend/node_modules/vitest/dist/chunks/execute.B7h3T_Hc.js:284:17)
    at Object.get (file:///home/charles-pham/git/canada-disability-benefit/frontend/node_modules/vitest/dist/chunks/execute.B7h3T_Hc.js:330:16)
    at UnilingualErrorBoundary (/home/charles-pham/git/canada-disability-benefit/frontend/app/components/error-boundaries.tsx:353:18)
    at Object.react-stack-bottom-frame (/home/charles-pham/git/canada-disability-benefit/frontend/node_modules/react-dom/cjs/react-dom-client.development.js:23863:20)
    at renderWithHooks (/home/charles-pham/git/canada-disability-benefit/frontend/node_modules/react-dom/cjs/react-dom-client.development.js:5529:22)
    at updateFunctionComponent (/home/charles-pham/git/canada-disability-benefit/frontend/node_modules/react-dom/cjs/react-dom-client.development.js:8897:19)
    at beginWork (/home/charles-pham/git/canada-disability-benefit/frontend/node_modules/react-dom/cjs/react-dom-client.development.js:10522:18)
    at runWithFiberInDEV (/home/charles-pham/git/canada-disability-benefit/frontend/node_modules/react-dom/cjs/react-dom-client.development.js:1522:13)
    at performUnitOfWork (/home/charles-pham/git/canada-disability-benefit/frontend/node_modules/react-dom/cjs/react-dom-client.development.js:15140:22)
    at workLoopSync (/home/charles-pham/git/canada-disability-benefit/frontend/node_modules/react-dom/cjs/react-dom-client.development.js:14956:41)
      </pre>
      <p>
        💿 Hey developer 👋
      </p>
      <p>
        You can provide a way better UX than this when your app throws errors by providing your own 
        <code
          style="padding: 2px 4px; background-color: rgba(200, 200, 200, 0.5);"
        >
          ErrorBoundary
        </code>
         or
         
        <code
          style="padding: 2px 4px; background-color: rgba(200, 200, 200, 0.5);"
        >
          errorElement
        </code>
         prop on your route.
      </p>
    </div>
  </body>
</html>
`;

exports[`error-boundaries > UnilingualNotFound > should correctly render the unilingual 404 when it catches a 404 error > expected html 1 1`] = `
<html>
  <head>
    <meta
      charset="utf-8"
    />
    <meta
      content="width=device-width, initial-scale=1"
      name="viewport"
    />
    <meta
      content="Mes lettres de la Prestation canadienne pour les personnes handicapées - Erreur"
      name="dcterms.title"
    />
    <meta
      content="fra"
      name="dcterms.language"
    />
    <meta
      content="Emploi et Développement social Canada"
      name="dcterms.creator"
    />
    <meta
      content="1"
      name="dcterms.accessRights"
    />
    <meta
      content="ESDC-EDSC_MSCA-MDSC_CDBLetters-LettresPCPH"
      name="gcaaterms.sitename"
    />
    <script
      src="/api/client-env?v=undefined"
    />
  </head>
  <body>
    <div>
      <header
        class="border-b-[3px] border-slate-700 print:hidden"
      >
        <div
          id="wb-bnr"
        >
          <div
            class="container flex items-center justify-between gap-6 py-2.5 sm:py-3.5"
          >
            <a
              href="https://canada.ca/"
            >
              <img
                alt="gcweb:header.govt-of-canada.text"
                class="h-8 w-auto"
                decoding="async"
                height="28"
                src="https://www.canada.ca/etc/designs/canada/wet-boew/assets/sig-blk-en.svg"
                width="300"
              />
            </a>
          </div>
        </div>
      </header>
      <main
        class="container"
      >
        <div
          class="mt-10 mb-8"
        >
          <h1
            class="font-lato text-3xl font-bold focus-visible:ring-3 after:mt-2 after:block after:h-1.5 after:w-18 after:bg-red-700 my-8"
            id="wb-cont"
            tabindex="-1"
          >
            <span>
              gcweb:not-found.page-title
            </span>
            <small
              class="block text-2xl font-normal text-neutral-500"
            >
              gcweb:not-found.page-subtitle
            </small>
          </h1>
        </div>
        <p
          class="mb-8 text-lg text-gray-500"
        >
          gcweb:not-found.page-message
        </p>
      </main>
      <footer
        class="mt-8 bg-stone-50 print:hidden"
        id="wb-info"
        tabindex="-1"
      >
        <div>
          <div
            class="bg-gray-700 text-white"
          >
            <section
              class="container py-6"
            >
              <h2
                class="mb-4"
              >
                gcweb:footer.service-canada
              </h2>
              <div
                class="grid gap-x-4 gap-y-2 text-sm sm:grid-cols-3"
              >
                <a
                  class="hover:underline"
                  href="gcweb:app.contact-us.href"
                  property="item"
                  typeof="WebPage"
                >
                  <span
                    property="name"
                  >
                    gcweb:app.contact-us
                  </span>
                </a>
              </div>
            </section>
          </div>
        </div>
        <div
          class="container flex items-center justify-between gap-6 py-2.5 sm:py-3.5"
        >
          <h2
            class="sr-only"
          >
            gcweb:footer.about-site
          </h2>
          <div
            class="flex flex-col items-start gap-2 text-sm leading-6 sm:flex-row sm:items-center sm:gap-4"
          >
            <a
              class="text-slate-700 hover:underline"
              data-gc-analytics-navigation="Footer:Footer:gcweb:footer.terms-conditions.text"
              href="gcweb:footer.terms-conditions.href"
            >
              gcweb:footer.terms-conditions.text
            </a>
            <div
              class="hidden size-0 rounded-full border-[3px] border-slate-700 sm:block"
            />
            <a
              class="text-slate-700 hover:underline"
              data-gc-analytics-navigation="Footer:Footer:gcweb:footer.privacy.text"
              href="gcweb:footer.privacy.href"
            >
              gcweb:footer.privacy.text
            </a>
          </div>
          <div>
            <img
              alt="gcweb:footer.gc-symbol"
              class="h-10 w-auto"
              height="71"
              src="https://www.canada.ca/etc/designs/canada/wet-boew/assets/wmms-blk.svg"
              width="300"
            />
          </div>
        </div>
      </footer>
    </div>
  </body>
</html>
`;
